<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="12dip" >

    <RadioGroup
        android:id="@+id/mission_status_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <RadioButton
            android:id="@+id/mission_status_radio1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mission_status_1"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioButton
            android:id="@+id/mission_status_radio2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
                        android:gravity="center"
            android:text="@string/mission_status_2"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioButton
            android:id="@+id/mission_status_radio3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mission_status_3"
                        android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RadioGroup>

</RelativeLayout>