<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="12dip" >

        <TextView
            style="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_before_verify"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginTop="2dip"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginTop="5dip"
            android:orientation="horizontal" >

            <TextView
                style="?android:attr/textAppearanceMedium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center"
                android:text="@string/temperature"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/verify_temperature"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="请输入.."
                android:textColor="@android:color/widget_edittext_dark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginTop="5dip"
            android:orientation="horizontal" >

            <TextView
                style="?android:attr/textAppearanceMedium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center"
                android:text="@string/humidity"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/verify_humidity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="请输入.."
                android:textColor="@android:color/widget_edittext_dark" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginTop="5dip"
            android:background="@android:color/black" />

        <TextView 
            android:id="@+id/verify_test_text+view"
            android:layout_width="fill_parent"
            android:layout_marginTop="5dip"
            android:layout_height="100dip"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:textColor="#ffffff"
            android:text="sdasdas"
            />
        <TextView
            android:layout_marginTop="5dip"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_after_verify"
            android:textColor="@android:color/black" />
        <Button 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/verify_read_machine"
            android:text="@string/read_from_calibrator"
            />
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:orientation="horizontal" >

            <TextView
                style="?android:attr/textAppearanceMedium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center"
                android:text="@string/made_number"
                android:textColor="@android:color/black" />

            <Spinner
                android:id="@+id/verify_made_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>