<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dip"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip" >

        <TextView
            android:id="@+id/electir_dialog_title"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="30dip"
            android:gravity="center_vertical"
            android:textColor="@color/blue_light"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="@color/blue_light" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:orientation="vertical" >

        <TextView
            style="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/negative_active"
            android:textColor="@color/blue_light" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginLeft="30dip"
            android:layout_marginTop="5dip"
            android:background="@color/blue_light" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:orientation="horizontal" >

            <TextView
                style="?android:attr/textAppearanceMedium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center"
                android:text="@string/total_power"
                android:textColor="@color/blue_light" />

            <EditText
                android:id="@+id/dialog_total_power"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:digits="-.1234567890"
                android:hint="请输入.."
                android:inputType="number"
                android:textColor="@color/text_color_black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:orientation="horizontal" >

            <TextView
                style="?android:attr/textAppearanceMedium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center"
                android:text="@string/peak"
                android:textColor="@color/blue_light" />

            <EditText
                android:id="@+id/dialog_peak"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:digits="-.1234567890"
                android:hint="请输入.."
                android:inputType="number"
                android:textColor="@color/text_color_black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:orientation="horizontal" >

            <TextView
                style="?android:attr/textAppearanceMedium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center"
                android:text="@string/valley"
                android:textColor="@color/blue_light" />

            <EditText
                android:id="@+id/dialog_valley"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:digits="-.1234567890"
                android:hint="请输入.."
                android:inputType="number"
                android:textColor="@color/text_color_black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:orientation="horizontal" >

            <TextView
                style="?android:attr/textAppearanceMedium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center"
                android:text="@string/average"
                android:textColor="@color/blue_light" />

            <EditText
                android:id="@+id/dialog_average"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:digits="-.1234567890"
                android:hint="请输入.."
                android:inputType="number"
                android:textColor="@color/text_color_black" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginLeft="30dip"
        android:background="@color/blue_light" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:orientation="horizontal" >

        <TextView
            style="?android:attr/textAppearanceMedium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/positive_reactive"
            android:textColor="@color/blue_light" />

        <EditText
            android:id="@+id/dialog_positive_reactive"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:digits="-.1234567890"
            android:hint="请输入.."
            android:inputType="number"
            android:textColor="@color/text_color_black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:orientation="horizontal" >

        <TextView
            style="?android:attr/textAppearanceMedium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/negative_reactive"
            android:textColor="@color/blue_light" />

        <EditText
            android:id="@+id/dialog_negative_reactive"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="请输入.."
            android:inputType="number"
            android:textColor="@color/text_color_black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:orientation="horizontal" >

        <TextView
            style="?android:attr/textAppearanceMedium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/maximum_active_demand"
            android:textColor="@color/blue_light" />

        <EditText
            android:id="@+id/dialog_maximum_active_demand"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:digits="-.1234567890"
            android:hint="请输入.."
            android:inputType="number"
            android:textColor="@color/text_color_black" />
    </LinearLayout>

    <Button
        android:id="@+id/dialog_electir_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="5dip"
        android:text="@string/confirm" />

</LinearLayout>